# CarParty

./: .gitignore  Cargo.toml  FirstCar v10.fbx  LICENSE  README.md  default_bus_layout.tres  out.out  project.godot
.import/: simple eight with partly missed barrier.glb-2f953c2ff54bc7a6be29a1e15f70be1b.md5  simple eight with partly missed barrier.glb-2f953c2ff54bc7a6be29a1e15f70be1b.scn
CAD/: CitiCar v2.step  FirstCar v13.step  Forklift v3.step  Transporter v2.step
CarPartyClient/: README.md  karma.conf.js  package-lock.json  package.json  tsconfig.json  webpack.config.js
CarPartyClient/extractVersionInformation/: index.js  package-lock.json  package.json
CarPartyClient/public/: index.html
CarPartyClient/scss/: styles.scss
CarPartyClient/src/: additionalTypes.ts  car-party.component.html  car-party.component.scss  car-party.component.ts  (+4 more)
FBX/: CitiCar v2.fbx  FirstCar v13.fbx  Forklift v3.fbx  Transporter v2.fbx
FBX2013/: FirstCar v13.fbx
scenes/: Camera_Follow.gd  Car.gd  Car.tscn  CitiCar.tscn  DebugSphere.tscn  FirstCar.tscn  Forklift.tscn  Game.tscn  HostMenu.gd  HostMenu.tscn  Scoreboard.tscn  StartMenu.gd  StartMenu.tscn  Track01.tscn  Transporter.tscn
scripts/: CameraFollow.gd  Camera_Follow.gd  Car.gd  Game.gd  HostMenu.gd  LineDrawer.gd  PathGenerator.gd  PlacementText.gd  Scoreboard.gd  SplitScreen.gd  StartMenu.gd  Track.gd  TrackTransformer.gd  TrackWithStuffScript.gd
src/: main.rs  relay.rs
tracks/: simple eight with partly missed barrier.blend  simple eight.blend
transport_schema/: client2server-schema.json  server2client-schema.json
(+230 files in other folders)
