[package]
name = "carparty-relay"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["net", "rt", "macros", "rt-multi-thread", "sync"] }
tokio-tungstenite = "0.15.0"
futures-util = "0.3.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
eyre = "0.6.5"
lazy_static = "1.4.0"
tungstenite = "0.16.0"
clap = "3.0.0-beta.5"
